--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marketplace-dashboard",
+  "name": "mrktplace-dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
